# jsync-tauri

./: .gitattributes  .gitignore  AI_MEMORY.md  BUGS.md  README.md  RELEASE.md  index.html  location-detail.jsx  main.applescript  package-lock.json  package.json  plan.md  playwright-screenshot-approach.md  quick-screenshot.cjs  test-signing.sh
.claude/commands/: release.md
.github/workflows/: release.yml  test-signing.yml
Planning and documents/: location-options-interface-plan.md  playwright-screenshot-approach.md  react-mockup-v1.1.jsx  react-mockup-v2.jsx  session-sidecar-architecture.md  todo.md
example/tauri-menubar-app-main/: package-lock.json
scripts/: generate-updater-json.mjs
src/: App.css  App.tsx  PrefsApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: rclone-aarch64-apple-darwin
src-tauri/capabilities/: default.json  prefs.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_dialog.rs  macos_window.rs  main.rs
src-tauri/src/commands/: backup.rs  destinations.rs  mod.rs  permissions.rs  session.rs
src/components/: LocationDetail.tsx  ScrollContainer.tsx  Tooltip.tsx
src/hooks/: useScheduler.ts  useStore.ts  useTooltip.ts
src/lib/: tauri.ts  types.ts
